<resources>

    <string name="FACEBOOK_APPLICATION_ID">320072385010322</string>
    <string name="GOOGLEPLUS_WEBCLIENT_ID">218106236410-tmh1pqkpabkdh1s2bc13frohbn8fi87i.apps.googleusercontent.com</string>


    <string name="title_section1">Bulk SMS</string>
    <string name="title_section2">Set Reminder</string>
    <string name="title_section3">Active Jobs</string>
    <string name="title_section4">About</string>



    <string name="contactbook_search_view_hint">Search Contact List</string>


    <string name="btn_bulksms_send_now_text">Send Now</string>
    <string name="btn_bulksms_send_now_msg91text">Send Now via MSG91</string>
    <string name="btn_bulksms_set_reminder_text">Send : </string>


    <string name="business_tag_line">Tell The World...</string>
    <string name="action_exit_app">Exit App</string>
    <string name="action_tell_a_friend">Tell A Friend (email)</string>
    <string name="action_rate_app_on_google_play_store">Rate Us</string>
    <string name="action_send_promotional_email">Promote App</string>

    <string name="confirm_msg">Yes Please!</string>
    <string name="deny_msg">No Thanks!</string>
    <string name="dialog_request_promotional_email_msg">Spread a word about Bulk SMS to all your friends.
    Clicking YES, assumes your approval to send a Promotional Email to ALL email contacts in your list.</string>



    <string name="title_activity_contact_book">Select Contacts</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_otplogin">OTP Login</string>
    <string name="title_activity_fblogin">Facebook Login</string>
    <string name="title_activity_gplogin">GooglePlus Login</string>
    <string name="title_set_date_time">Set Date and Time</string>
    <string name="name">Name</string>
    <string name="number">Phone Number</string>

    <string name="copyright_disclaimer"> Copyright © 2017, Softwares Unleashed Inc. \n email: softwares.unleashed@gmail.com  \n url: www.softwaresunleashed.com</string>

    <string name="test_device_id">41001a3e2e05b000</string>



    <!--Rating prompt related strings-->
    <string name="feedback_prompt_title">Are you happy with BulkSMS app ?</string>
    <string name="feedback_prompt_negative_btn">No</string>
    <string name="feedback_prompt_positive_btn">Yes</string>
    <string name="rating_prompt_title">Thank You</string>
    <string name="rating_prompt_message">Happy to hear that you liked BulkSMS! Will you take a moment to rate us in the Play Store </string>
    <string name="rating_prompt_negative_btn">No Thanks</string>
    <string name="rating_prompt_positive_btn">Rate This App</string>
    <string name="rating_prompt_neutral_btn">Remind Me Later</string>
    <string name="play_app_not_found">Google Play App not found</string>
    <string name="rate">Rate App</string>
    <string name="review_rate_our_application">We\'d love to get feedback from you on our app. The more details you can provide, the better.</string>
    <string name="review_tap_on_the_star">Tap on the rating bar to rate</string>
    <string name="review_no_thanks">No, thank you. I will assess later</string>
    <string name="review_thank_you_for_rating">Thank you for rating!</string>
    <string name="review_go_to_app_store">We are pleased that you like our app! Go to the App Store to share your opinion with other users.</string>
    <string name="review_not_now">Not now</string>
    <string name="review_go">Go</string>
    <string name="review_thank_you_for_feedback">Thank you! Your feedback has been sent.</string>
    <string name="review_write_us_detailed_comment">Send us your views</string>
    <string name="review_your_email">Your e-mail (optional)</string>
    <string name="submit">SUBMIT</string>
    <string name="love_to_hear">We would love to hear from you about our app</string>
    <string name="thanks">Thanks!</string>
    <string name="thanks_feedback">Thanks for your feedback, we will definitely improve.</string>
    <string name="ok_got_it">Ok, got it</string>
    <string name="action_no_thanks">No thanks</string>
    <string name="rate_us">Rate Us!</string>
    <string name="rate_us_msg">Happy to hear that you love our app! Will you take out a moment and rate us on playstore.</string>
    <string name="action_rate_us">Rate this App on play store</string>
    <string name="action_remind_later">Remind me later</string>
    <string name="title_enjoying_app">Enjoying BulkSMS!</string>
    <string name="subtitle_enjoying_app">How was your experience with BulkSMS?</string>
    <string name="txt_no_like">Ahh!</string>
    <string name="txt_yes_like">Loved it</string>

    <!--Login strings-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_internet_new">Oops! No internet.Check your connection</string>
    <string name="auth_failed">Oops! Authentication Failure. Try again with correct Username and Password</string>
    <string name="new_user_registration_success">Yeehaw! Your profile has been created.</string>
    <string name="new_user_registration_failed">Oops! New User Registration Failed. Try again with different Username. Or Password should be atleast 6 characters long.</string>
    <string name="auth_success">Yeehaw! Authentication Success.</string>
    <string name="retry">Retry</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="link_your_facebook">Complete your profile.</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="mobile">Mobile</string>
    <string name="google">Google</string>
    <string name="login_via_otp_text">Prefer to login via OTP ?</string>
    <string name="account_terms_use">By continuing, you agree to the Terms and Conditions</string>
    <string name="login_now">Email Login</string>
    <string name="otp_login_now">OTP Login</string>
    <string name="login">Login</string>
    <string name="login_required_message">You need to login or register to continue using BulkSMS</string>
    <string name="exit_app">Exit App</string>
    <string name="continue_btn">Continue</string>
    <string name="create_new_password">Create New Password</string>
    <string name="please_wait">Please wait</string>
    <string name="logging_progress">Logging you in...</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_new_user">Enter OTP</string>
    <string name="otp_sent_to_phone">OTP has been sent to your phone. Use that code to login...</string>
    <string name="already_facebook_loggedin">Already Facebook Logged in</string>
    <string name="already_googleplus_loggedin">Already Google Plus Logged in</string>
    <string name="login_success">Login Success</string>
    <string name="uname_passwd_error">Try again with a proper Username and Password</string>
    <string name="login_cancel">Login Cancelled</string>
    <string name="login_error">Login Error</string>
    <string name="something_not_right">Oops! Something is not right. Unable to login.</string>




    <!--Validation Strings-->
    <string name="validation_caps_lock">Up to {0} characters can be capitalised</string>
    <string name="validation_future_date">Enter current or future date </string>
    <string name="validation_disallow_email">Invalid field value. Email address cannot be entered</string>
    <string name="validation_disallow_www">Invalid field value. www address cannot be entered</string>
    <string name="validation_disallow_phone">Field is not valid. Phone numbers are not allowed</string>
    <string name="validation_too_many_special_chars">Too many special characters. Like -,#,&amp;,%,etc.</string>
    <string name="validation_illegal_symbols">Title can include characters and numbers only</string>
    <string name="validation_disallow_seeking">Impermissible phrase entered</string>
    <string name="validation_min_value" formatted="false">Minimum value required is %s</string>
    <string name="validation_max_value" formatted="false">Maximum value required is %s</string>
    <string name="validation_min_length" formatted="false">Minimum %s characters</string>
    <string name="validation_max_length" formatted="false">This cannot exceed %s characters</string>
    <string name="validation_category_read_only">Category for your active ad cannot be changed.</string>
    <string name="validation_read_only">This field cannot be changed</string>
    <string name="validation_field_digits">This field can contain only numbers</string>
    <string name="validation_phone_less_than_10">Phone number must be of 10-digits</string>
    <string name="validation_field_required">This field is required</string>


    <!--Dialog Box strings-->
    <string name="remove_contact_from_list_title">Remove Contact</string>
    <string name="remove_contact_from_list_content">Are you sure you want to remove this contact from list ??</string>
    <string name="btn_text_delete">Delete</string>
    <string name="btn_text_cancel">Cancel</string>


    <string name="edt_box_characters_left">160 Chars Left</string>



</resources>
