<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">



    <item android:id="@+id/action_tell_a_friend_via_email" android:title="@string/action_tell_a_friend"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_send_promotional_email" android:title="@string/action_send_promotional_email"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_rate_app_on_google_play_store" android:title="@string/action_rate_app_on_google_play_store"
        android:orderInCategory="100" app:showAsAction="never" />



    <item android:id="@+id/action_exit" android:title="@string/action_exit_app"
        android:orderInCategory="100" app:showAsAction="never" />



</menu>
