<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tablica="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_container"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/md_60dp_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/md_8dp_margin"
            android:layout_marginRight="@dimen/md_8dp_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_8dp_margin"
                android:inputType="textEmailAddress" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_register_newuser"
                    style="@style/Body1Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/md_20dp_margin"
                    android:background="@drawable/blue_link_button_selector"
                    android:text="@string/register_new_user"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:textColor="@color/dark_sky_blue" />

                <View
                    android:layout_width="@dimen/md_8dp_margin"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    style="@style/Body1Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/md_20dp_margin"
                    android:background="@drawable/blue_link_button_selector"
                    android:text="@string/forgot_password"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:textColor="@color/dark_sky_blue" />
            </android.support.v7.widget.LinearLayoutCompat>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_login"
        style="@style/BottomActionTextPosting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_gravity="bottom"
        android:background="@drawable/orange_button_selector"
        android:gravity="center_vertical|center_horizontal"
        android:padding="@dimen/padding_4dp"
        android:text="@string/login"
        android:visibility="visible" />

</FrameLayout>

